<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:clickable="true"
    android:orientation="vertical"
    android:focusable="true" >

    <com.jjoe64.graphview.GraphView
        android:id="@+id/scg_graph"
        android:layout_width="340dip"
        android:layout_height="200dip"
        android:layout_marginStart="1dp"
        android:layout_marginTop="290dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="107dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/heartrate"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="660dp"
        android:onClick="startMeasurement"
        android:text="@string/startMeasurement"
        app:backgroundTint="@color/red" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="262dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/measurementCaption"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/measuringCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/measuringCaption"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/filteringCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/noiseFiltering"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/plotCaption"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:text="@string/plotCaption"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/titleInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/titleInstructions"
        android:textSize="20sp"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:text="@string/SCGInstructions"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/lowCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginHorizontal="46dp"
        android:layout_marginTop="210dp"
        android:text="@string/low"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/highCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginHorizontal="339dp"
        android:layout_marginTop="210dp"
        android:text="@string/high"
        android:visibility="visible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textSize="34sp"
        android:visibility="invisible" />

</RelativeLayout>