<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30dp"
        android:paddingLeft="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bpmHistory"
            android:textColor="@color/red"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/typeHistory"
            android:textColor="@color/red"
            android:textAlignment="textEnd"
            android:textSize="21sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeHistory"
        android:textColor="@color/red"
        android:textAlignment="center" />
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/DeleteItem"
            android:layout_width="100dp"
            android:layout_height="40dp"
            app:backgroundTint="@color/red"
            android:text="@string/deleteHistoryItem" />
    </LinearLayout>

</LinearLayout>